Log level fix enable grep

--- a/OutworldzFiles/Opensim/bin/Robust.HG.ini
+++ b/OutworldzFiles/Opensim/bin/Robust.HG.ini
@@ -25,24 +25,24 @@
 
 ;; Set by Dreamgrid
 ; ${Const|GridName}
-GridName=DreamGrid
-http_listener_port=8002
+GridName=Outworldz Grid
+http_listener_port=9000
 
 ;; Set by Dreamgrid
 ; The URL of the Robust server
-BaseURL=http://127.0.0.1
+BaseURL=http://www.outworldz.com
 
 ; The URL of the Robust server, if PublicPort and PrivatePort must be
 ; accessed via different hostnames as in the case of a NAT gateway
-PrivURL=http://127.0.0.1
+PrivURL=http://192.168.2.140
 
 ;; Set by Dreamgrid
 ; The public port of the Robust server
-PublicPort=8002
+PublicPort=9000
 
 ;; Set by Dreamgrid
 ; The private port of the Robust server
-PrivatePort=8003
+PrivatePort=9001
 
 ;; Set by Dreamgrid
 ; port used for icons, teleports and other tasks when communicating to/from opensim
@@ -50,7 +50,7 @@ DiagnosticsPort=8001
 
 ;; Set by Dreamgrid
 ;Apache Port for Jopensim
-ApachePort=80
+ApachePort=9002
 
 ;
 ; * The startup section lists all the connectors to start up in this server
@@ -133,7 +133,7 @@ GroupsServiceConnector="${Const|PrivatePort}/OpenSim.Addons.Groups.dll:GroupsSer
 BakedTextureService="${Const|PrivatePort}/OpenSim.Server.Handlers.dll:XBakesConnector"
 
 ;; Uncomment for UserProfiles see [UserProfilesService] to configure...
-UserProfilesServiceConnector=
+UserProfilesServiceConnector=${Const|PublicPort}/OpenSim.Server.Handlers.dll:UserProfilesConnector
 
 ;; Uncomment if you want to have centralized estate data
 EstateDataService="${Const|PrivatePort}/OpenSim.Server.Handlers.dll:EstateDataRobustConnector"
@@ -152,7 +152,7 @@ HGAssetServiceConnector="HGAssetService@${Const|PublicPort}/OpenSim.Server.Handl
 HGGroupsServiceConnector="${Const|PublicPort}/OpenSim.Addons.Groups.dll:HGGroupsServiceRobustConnector"
 
 ;; needed for JOpensim profile pictures
-GetTextureConnector=${Const|PublicPort}/Opensim.Capabilities.Handlers.dll:GetTextureSeverConnector
+GetTextureConnector=
 
 ; * This is common for all services, it's the network setup for the entire
 ; * server instance, if none is specified above
@@ -223,7 +223,7 @@ HomeURI="${Const|BaseURL}:${Const|PublicPort}"
 ;; comma separated list, and port (default 80 or 443)
 ;; in case there was for example a dns change, etc but it is still same grid
 ; HomeURIAlias = myoldname.something.org, 127.0.0.1,127.0.1:8043
-HomeURIAlias=
+HomeURIAlias=outworldz.com
 
 ;
 ;# {GatekeeperURI} {Hypergrid} {The URL of the gatekeeper of this world} {}
@@ -237,7 +237,7 @@ GatekeeperURI="${Const|BaseURL}:${Const|PublicPort}"
 ;; comma separated list, and port (default 80 or 443)
 ;; in case there was for example a dns change, etc
 ; GatekeeperURIAlias = myoldname.something.org, 127.0.0.1,127.0.1:8043
-GatekeeperURIAlias=
+GatekeeperURIAlias=outworldz.com
 
 ;
 [AccessControl]
@@ -273,7 +273,7 @@ DeniedClients=
 ; Change the connection string to your db details
 ;; Set by Dreamgrid
 StorageProvider="OpenSim.Data.MySQL.dll"
-ConnectionString="Data Source=127.0.0.1;Database=Robust;Port=3306;User ID=robustuser;Password=robustpassword;Old Guids=true;Allow Zero Datetime=true;Connect Timeout=28800;Command Timeout=28800;"
+ConnectionString="Data Source=127.0.0.1;Database=robust;Port=3306;User ID=robustuser;Password=Robustness;Old Guids=true;Allow Zero Datetime=true;Connect Timeout=28800;Command Timeout=28800;"
 
 ; * As an example, the below configuration precisely mimicks the legacy
 ; * asset server. It is read by the asset IN connector (defined above)
@@ -283,13 +283,13 @@ ConnectionString="Data Source=127.0.0.1;Database=Robust;Port=3306;User ID=robust
 [AssetService]
 
 ;; Choose an asset service (Only one option should be enabled)
-LocalServiceModule=OpenSim.Services.AssetService.dll:AssetService
+LocalServiceModule=OpenSim.Services.FSAssetService.dll:FSAssetConnector
 
 ;LocalServiceModule="OpenSim.Services.FSAssetService.dll:FSAssetConnector"
 ;; FSAsset Directories. Base directory, where final asset files are stored and Spool directory for temp files
 ;; These directories must be on the same physical filesystem
-BaseDirectory=./fsassets/data
-SpoolDirectory=./fsassets/tmp
+BaseDirectory=E:\FSAssets/data
+SpoolDirectory=E:\FSAssets/tmp
 
 ;; Original service can be checked if FSAssets can not find an asset
 FallbackService=OpenSim.Services.AssetService.dll:AssetService
@@ -299,7 +299,7 @@ FallbackService=OpenSim.Services.AssetService.dll:AssetService
 DaysBetweenAccessTimeUpdates=30
 
 ;; Should FSAssets print read/write stats to the robust console, default is true
-ShowConsoleStats=True
+ShowConsoleStats=False
 
 ;; FSAssets Custom Database Config (Leave blank to use grids default database configuration)
 ;StorageProvider=
@@ -372,6 +372,78 @@ AssetService="OpenSim.Services.AssetService.dll:AssetService"
 ;; Set by Dreamgrid
 ;;
 ; START  <= Leave this line
+Region_Airport=FallbackRegion
+Region_AlphaCentauriTrek=FallbackRegion
+Region_Free_Angkor_sim=FallbackRegion
+Region_Free_Art_City_2025=FallbackRegion
+Region_Free_Avatar_Center_Sim=FallbackRegion
+Region_Free_Back-In-Time_Sim=FallbackRegion
+Region_Big_N_Large=FallbackRegion
+Region_Combat=FallbackRegion
+Region_Cyber=FallbackRegion
+Region_Dragons!=FallbackRegion
+Region_Virunga!=FallbackRegion
+Region_Free_Disability_Awareness=FallbackRegion
+Region_Free_Alpha_Station_Sim=FallbackRegion
+Region_Free_Danger_Sim_-_a_Game=FallbackRegion
+Region_Free_Fairy_Island=FallbackRegion
+Region_Free_Garden_By_The_Sea=FallbackRegion
+Region_Free_Habitat39_Sim=FallbackRegion
+Region_Free_Hypermall_Sim=FallbackRegion
+Region_Free_Star_Wars_Sim=FallbackRegion
+Region_Free_Isis_Sim=FallbackRegion
+Region_Free_Pirates_Island_Sim=FallbackRegion
+Region_Free_Sanitarium_Sim=FallbackRegion
+Region_Free_SwanLake_Sim=FallbackRegion
+Region_Free_Tropical_Island_Sim=FallbackRegion
+Region_Free_UnderWater_Sim=FallbackRegion
+Region_Free_Waterlilies_Sim=FallbackRegion
+Region_Alexandria=FallbackRegion
+Region_Enchanted=FallbackRegion
+Region_Free_Faraway_Sim=FallbackRegion
+Region_Franki=FallbackRegion
+Region_Free_Castle=FallbackRegion
+Region_Free_Desert_Island=FallbackRegion
+Region_Free_Jewelry_Store=FallbackRegion
+Region_Free_DreamTrack=FallbackRegion
+Region_Free_Future_Sim=FallbackRegion
+Region_Gravity=FallbackRegion
+Region_Free_Hobbiton_Collection=FallbackRegion
+Region_Free_Hobo_sim_by_Arcadia=FallbackRegion
+Region_Hypergrid_Party=FallbackRegion
+Region_Hyperica=FallbackRegion
+Region_IMesh_Store=FallbackRegion
+Region_Free_Linda_Kelly_Freebies__Sim=FallbackRegion
+Region_Hypergrid_Swamp=FallbackRegion
+Region_Mermaid=FallbackRegion
+Region_Free_Mirkwood=FallbackRegion
+Region_Cinderella_Snowgarde=FallbackRegion
+Region_Easthold=FallbackRegion
+Region_MotherGoose=FallbackRegion
+Region_Rapunzel=FallbackRegion
+Region_Rockbell=FallbackRegion
+Region_Flying_Mountains=FallbackRegion
+Region_OldRome=FallbackRegion
+Region_Phaze-Dragons=FallbackRegion
+Region_Raceway=FallbackRegion
+Region_Roller_Coaster=FallbackRegion
+Region_Dinotopia=FallbackRegion
+Region_Rome=FallbackRegion
+Region_RomeSouth=FallbackRegion
+Region_SandBox=FallbackRegion
+Region_SandBox_Bullet=FallbackRegion
+Region_Sandbox_UBODE=FallbackRegion
+Region_Shasi=FallbackRegion
+Region_Silent_Refueling=FallbackRegion
+Region_Silent_Refueling_Base=FallbackRegion
+Region_Silent_Running_#1=FallbackRegion
+Region_Sunjo=FallbackRegion
+Region_Swamp=FallbackRegion
+Region_Tangled_Up=FallbackRegion
+Region_DreamGrid_Test_Region=FallbackRegion
+Region_Underground=FallbackRegion
+Region_Virunga=FallbackRegion
+Region_Free_WeddingWoods_Sim=FallbackRegion
 Region_Welcome="DefaultRegion, DefaultHGRegion"
 
 ; END  <= Leave this line
@@ -529,13 +601,13 @@ HGInventoryServicePlugin="HGInventoryService@OpenSim.Services.HypergridService.d
 ;; end hypergrid
 ; Ask co-operative viewers to use a different currency name
 ;; Set by Dreamgrid
-Currency=jO$
+Currency=$
 
 ;; Set minimum fee to publish classified
 ClassifiedFee=0
 
 ;;
-WelcomeMessage=Welcome to DreamGrid, <USERNAME>
+WelcomeMessage=Welcome to Outworldz Grid, <USERNAME>
 
 ;;
 AllowRemoteSetLoginLevel="false"
@@ -546,12 +618,12 @@ MapTileURL="${Const|BaseURL}:${Const|PublicPort}/"
 ; Url to search service
 ;SearchURL = "${Const|BaseURL}:${Const|PublicPort}/JOpensim/index.php?option=com_opensim&view=inworldsearch&task=viewersearch&tmpl=component&"
 ;SearchURL=http://www.hyperica.com/Search/query.php
-SearchURL=http://127.0.0.1:80/jOpensim/index.php?option=com_opensim&view=inworldsearch&task=viewersearch&tmpl=component&
+SearchURL=http://hyperica.com/Search/query.php
 
 ; For V3 destination guide
 ;DestinationGuide = "${Const|BaseURL}:${Const|PublicPort}/JOpensim//index.php?option=com_opensim&view=guide&tmpl=component"
 ;DestinationGuideURI="http://www.hyperica.com/destination-guide/"
-DestinationGuide=http://127.0.0.1:80/jOpensim/index.php?option=com_opensim&view=guide&tmpl=component
+DestinationGuide=http://hyperica.com/destination-guide
 
 ; For V3 avatar picker (( work in progress ))
 ; AvatarPicker = "${Const|BaseURL}/avatars"
@@ -609,7 +681,7 @@ DOSAllowXForwardedForHeader=false
 ;
 ;Attempt to login or hypergrid in to the grid, teleport should timeout and login should fail.
 ;
-DeniedMacs=
+DeniedMacs=720a09ed944904df4e6ff1b164b94389 724cc316fab3ad25dfc15b5bafdb5ec7 ccb23b825533a6a742b53fb7c62bc145
 
 [MapImageService]
 LocalServiceModule="OpenSim.Services.MapImageService.dll:MapImageService"
@@ -646,13 +718,13 @@ gridnick=${Const|GridName}
 ;                       this as splash page
 ;; Set by Dreamgrid
 ;welcome = ${Const|BaseURL}:${Const|PublicPort}/JOpensim/index.php?option=com_opensim
-welcome=${Const|BaseURL}:${Const|ApachePort}/jOpensim/index.php?option=com_opensim
+welcome=http://www.Outworldz.com:9000/
 
 ; helper uri: optional: if it exists it will be used to tell the client to use
 ;                       this for all economy related things
 ;economy = ${Const|BaseURL}:${Const|PublicPort}/JOpensim/components/com_opensim/
 ;economy = ${Const|BaseURL):${Const|PublicPort}
-economy=${Const|BaseURL}:${Const|ApachePort}/jOpensim/components/com_opensim/
+economy=${Const|BaseURL}:${Const|PublicPort}
 
 ; web page of grid: optional: page providing further information about your grid
 ;about = ${Const|BaseURL}/about
@@ -717,7 +789,7 @@ AllowExcept=
 ;
 ;Attempt to login or hypergrid in to the grid, teleport should timeout and login should fail.
 ;
-DeniedMacs=
+DeniedMacs=720a09ed944904df4e6ff1b164b94389 724cc316fab3ad25dfc15b5bafdb5ec7 ccb23b825533a6a742b53fb7c62bc145
 
 [UserAgentService]
 LocalServiceModule="OpenSim.Services.HypergridService.dll:UserAgentService"
@@ -773,7 +845,7 @@ ShowUserDetailsInHGProfile=True
 
 ; For the InventoryServiceInConnector
 ;; set by Dreamgrid
-LocalServiceModule=OpenSim.Services.HypergridService.dll:HGSuitcaseInventoryService
+LocalServiceModule=OpenSim.Services.InventoryService.dll:XInventoryService
 
 ;; alternatives:
 ;;  HG1.5, more permissive, not recommended, but still supported
@@ -798,7 +870,7 @@ AuthType=None
 [HGAssetService]
 
 ;; Use the second option if you have FSAsset service enabled
-LocalServiceModule=OpenSim.Services.HypergridService.dll:HGAssetService
+LocalServiceModule=OpenSim.Services.HypergridService.dll:HGFSAssetService
 
 ;LocalServiceModule = "OpenSim.Services.HypergridService.dll:HGFSAssetService"
 UserAccountsService="OpenSim.Services.UserAccountService.dll:UserAccountService"
@@ -858,7 +930,7 @@ HomeURI="${Const|BaseURL}:${Const|PublicPort}"
 ; MaxAgentGroups = 42
 [UserProfilesService]
 LocalServiceModule="OpenSim.Services.UserProfilesService.dll:UserProfilesService"
-Enabled=False
+Enabled=True
 
 ;; Configure this for separate profiles database
 ;; ConnectionString = "Data Source=localhost;Database=opensim;User ID=opensim;Password=*****;Old Guids=true;"
@@ -878,8 +950,8 @@ LocalServiceModule="OpenSim.Services.MuteListService.dll:MuteListService"
 [SMTP]
 SMTP_SERVER_HOSTNAME=smtp.gmail.com
 SMTP_SERVER_PORT=587
-SMTP_SERVER_LOGIN=LoginName@gmail.com
-SMTP_SERVER_PASSWORD=Some Password
+SMTP_SERVER_LOGIN=fred.beckhusen@gmail.com
+SMTP_SERVER_PASSWORD=Root1root
 
 ;; Set to True to enable Smart Start
 ;; Set by Dreamgrid
