--- a/OutworldzFiles/Opensim/bin/Robust.exe.config
+++ b/OutworldzFiles/Opensim/bin/Robust.exe.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <configSections>
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net" />
@@ -45,7 +45,7 @@
       </layout>
     </appender>
     <root>
-      <level  value="INFO" />
+      <level  value="DEBUG" />
       <appender-ref ref="Console" />
       <appender-ref ref="LogFileAppender" />
     </root>
