--- a/Installer_Src/Setup DreamWorld/Start.vbproj
+++ b/Installer_Src/Setup DreamWorld/Start.vbproj
@@ -550,6 +550,7 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Sorter.vb" />
+    <Compile Include="Teleport.vb" />
     <Compile Include="UploadImage.vb" />
     <Compile Include="WindowHandlers.vb" />
     <Compile Include="WordWrap.vb" />
