--- a/Installer_Src/Setup DreamWorld/Start.vbproj
+++ b/Installer_Src/Setup DreamWorld/Start.vbproj
@@ -549,6 +549,7 @@
     <Compile Include="FormVoice.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="SmartStart.vb" />
     <Compile Include="Sorter.vb" />
     <Compile Include="Teleport.vb" />
     <Compile Include="UploadImage.vb" />
@@ -823,6 +824,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="cubes.ico" />
+    <None Include="Resources\cube_green_new.png" />
     <None Include="Resources\table.png" />
     <None Include="Resources\earth_view.png" />
     <None Include="Resources\chart.png" />
