--- a/Installer_Src/Setup DreamWorld/packages.config
+++ b/Installer_Src/Setup DreamWorld/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="BouncyCastle" version="1.8.6.1" targetFramework="net472" />
+  <package id="DotNetZip" version="1.15.0" targetFramework="net472" />
   <package id="Google.Protobuf" version="3.14.0" targetFramework="net472" />
   <package id="Humanizer.Core" version="2.8.26" targetFramework="net472" />
   <package id="ini-parser" version="2.5.2" targetFramework="net461" />
@@ -16,24 +17,17 @@
   <package id="MSChartWrapper" version="1.0.0.1" targetFramework="net46" />
   <package id="MySql.Data" version="8.0.22" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net461" />
-  <package id="SSH.NET" version="2016.1.0" targetFramework="net461" />
+  <package id="SharpZipLib" version="1.3.1" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Collections.Immutable" version="5.0.0" targetFramework="net472" />
   <package id="System.Composition" version="5.0.0" targetFramework="net472" />
   <package id="System.Composition.AttributedModel" version="5.0.0" targetFramework="net472" />
-  <package id="System.Composition.Convention" version="5.0.0" targetFramework="net472" />
-  <package id="System.Composition.Hosting" version="5.0.0" targetFramework="net472" />
   <package id="System.Composition.Runtime" version="5.0.0" targetFramework="net472" />
-  <package id="System.Composition.TypedParts" version="5.0.0" targetFramework="net472" />
-  <package id="System.IO.Compression" version="4.3.0" targetFramework="net472" />
-  <package id="System.IO.Compression.ZipFile" version="4.3.0" targetFramework="net472" />
   <package id="System.Memory" version="4.5.4" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net461" />
   <package id="System.Reflection.Metadata" version="5.0.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net472" />
-  <package id="System.Text.Encoding.CodePages" version="4.7.1" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net46" />
-  <package id="Ubiety.Dns.Core" version="4.2.0" targetFramework="net472" />
   <package id="Ubiety.Logging.Core" version="1.2.2" targetFramework="net472" />
 </packages>
