--- a/Installer_Src/CodeMaid.config
+++ b/Installer_Src/CodeMaid.config
@@ -74,6 +74,9 @@
             <setting name="Cleaning_PerformPartialCleanupOnExternal" serializeAs="String">
                 <value>1</value>
             </setting>
+            <setting name="Reorganizing_RunAtStartOfCleanup" serializeAs="String">
+                <value>True</value>
+            </setting>
         </SteveCadwallader.CodeMaid.Properties.Settings>
     </userSettings>
 </configuration>
