--- a/Installer_Src/CodeMaid.config
+++ b/Installer_Src/CodeMaid.config
@@ -23,7 +23,7 @@
                 <value>0</value>
             </setting>
             <setting name="Feature_CleanupAllCode" serializeAs="String">
-                <value>False</value>
+                <value>True</value>
             </setting>
             <setting name="Digging_SecondarySortTypeByName" serializeAs="String">
                 <value>True</value>
@@ -47,7 +47,7 @@
                 <value>True</value>
             </setting>
             <setting name="Digging_PrimarySortOrder" serializeAs="String">
-                <value>1</value>
+                <value>2</value>
             </setting>
             <setting name="Finding_TemporarilyOpenSolutionFolders" serializeAs="String">
                 <value>False</value>
