--- a/Installer_Src/CodeMaid.config
+++ b/Installer_Src/CodeMaid.config
@@ -75,7 +75,7 @@
                 <value>1</value>
             </setting>
             <setting name="Reorganizing_RunAtStartOfCleanup" serializeAs="String">
-                <value>True</value>
+                <value>False</value>
             </setting>
         </SteveCadwallader.CodeMaid.Properties.Settings>
     </userSettings>
