--- a/Installer_Src/Setup DreamWorld/Start.vbproj
+++ b/Installer_Src/Setup DreamWorld/Start.vbproj
@@ -302,6 +302,12 @@
     <Compile Include="FormFsAssets.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="FormIARLoad.Designer.vb">
+      <DependentUpon>FormIARLoad.vb</DependentUpon>
+    </Compile>
+    <Compile Include="FormIARLoad.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="FormIARSave.Designer.vb">
       <DependentUpon>FormIARSave.vb</DependentUpon>
     </Compile>
@@ -572,6 +578,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormFsAssets.resx">
       <DependentUpon>FormFsAssets.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormIARLoad.resx">
+      <DependentUpon>FormIARLoad.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormIARSave.resx">
       <DependentUpon>FormIARSave.vb</DependentUpon>
