--- a/Installer_Src/Setup DreamWorld/Start.vbproj
+++ b/Installer_Src/Setup DreamWorld/Start.vbproj
@@ -135,8 +135,14 @@
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="BouncyCastle.Crypto, Version=1.8.9.0, Culture=neutral, PublicKeyToken=0e99375e54769942, processorArchitecture=MSIL">
+      <HintPath>..\packages\Portable.BouncyCastle.1.8.9\lib\net40\BouncyCastle.Crypto.dll</HintPath>
+    </Reference>
     <Reference Include="DotNetZip, Version=1.15.0.0, Culture=neutral, PublicKeyToken=6583c7c814667745, processorArchitecture=MSIL">
       <HintPath>..\packages\DotNetZip.1.15.0\lib\net40\DotNetZip.dll</HintPath>
+    </Reference>
+    <Reference Include="EmailValidation, Version=1.0.0.0, Culture=neutral, PublicKeyToken=60f3df2f38e92638, processorArchitecture=MSIL">
+      <HintPath>..\packages\EmailValidation.1.0.4\lib\net45\EmailValidation.dll</HintPath>
     </Reference>
     <Reference Include="Humanizer, Version=2.8.0.0, Culture=neutral, PublicKeyToken=979442b78dfc278e, processorArchitecture=MSIL">
       <HintPath>..\packages\Humanizer.Core.2.8.26\lib\netstandard2.0\Humanizer.dll</HintPath>
@@ -147,6 +153,9 @@
     <Reference Include="LiveSwitch.TextControl, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\LiveSwitch.TextControl.exe</HintPath>
+    </Reference>
+    <Reference Include="MailKit, Version=2.10.0.0, Culture=neutral, PublicKeyToken=4e064fe7c44a8f1b, processorArchitecture=MSIL">
+      <HintPath>..\packages\MailKit.2.10.1\lib\net47\MailKit.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CodeAnalysis, Version=3.8.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.CodeAnalysis.Common.3.8.0\lib\netstandard2.0\Microsoft.CodeAnalysis.dll</HintPath>
@@ -161,6 +170,9 @@
       <HintPath>..\packages\Microsoft.CodeAnalysis.Workspaces.Common.3.8.0\lib\netstandard2.0\Microsoft.CodeAnalysis.Workspaces.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="MimeKit, Version=2.10.0.0, Culture=neutral, PublicKeyToken=bede1c8a46c66814, processorArchitecture=MSIL">
+      <HintPath>..\packages\MimeKit.2.10.1\lib\net47\MimeKit.dll</HintPath>
+    </Reference>
     <Reference Include="MSChartWrapper, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\MSChartWrapper.1.0.0.1\lib\MSChartWrapper.dll</HintPath>
     </Reference>
@@ -188,6 +200,7 @@
     <Reference Include="System.Memory, Version=4.0.1.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Memory.4.5.4\lib\net461\System.Memory.dll</HintPath>
     </Reference>
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Numerics" />
     <Reference Include="System.Numerics.Vectors, Version=4.1.4.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Numerics.Vectors.4.5.0\lib\net46\System.Numerics.Vectors.dll</HintPath>
@@ -195,6 +208,7 @@
     <Reference Include="System.Runtime.CompilerServices.Unsafe, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Runtime.CompilerServices.Unsafe.5.0.0\lib\net45\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
     </Reference>
+    <Reference Include="System.Security" />
     <Reference Include="System.Text.Encoding.CodePages, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Text.Encoding.CodePages.5.0.0\lib\net461\System.Text.Encoding.CodePages.dll</HintPath>
     </Reference>
@@ -241,6 +255,12 @@
     <Compile Include="Backups.vb" />
     <Compile Include="BreakPoint.vb" />
     <Compile Include="Clear_Cache.vb" />
+    <Compile Include="FormEmail.Designer.vb">
+      <DependentUpon>FormEmail.vb</DependentUpon>
+    </Compile>
+    <Compile Include="FormEmail.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="FormCopyright.Designer.vb">
       <DependentUpon>FormCopyright.vb</DependentUpon>
     </Compile>
@@ -549,6 +569,9 @@
     <Compile Include="WordWrap.vb" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="FormEmail.resx">
+      <DependentUpon>FormEmail.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormCopyright.resx">
       <DependentUpon>FormCopyright.vb</DependentUpon>
     </EmbeddedResource>
@@ -822,6 +845,10 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="cubes.ico" />
+    <None Include="Resources\cubes_yellow.png" />
+    <None Include="Resources\cubes_green.png" />
+    <None Include="Resources\cube_yellow.png" />
+    <None Include="Resources\cube_green.png" />
     <None Include="Resources\Outworldz ad by Marianna Monentes.png" />
     <None Include="Resources\ClicktoInsertPhoto.png" />
     <None Include="Resources\tables.png" />
@@ -832,8 +859,6 @@
     <None Include="Resources\package_find.png" />
     <None Include="Resources\package_error.png" />
     <None Include="Resources\package_delete.png" />
-    <None Include="Resources\package_add1.png" />
-    <None Include="Resources\package1.png" />
     <None Include="Resources\cube_green_new.png" />
     <None Include="Resources\table.png" />
     <None Include="Resources\earth_view.png" />
@@ -906,8 +931,6 @@
     <None Include="Resources\media_stop_red.png" />
     <None Include="Resources\water.jpg" />
     <None Include="Resources\blankbox.jpg" />
-    <None Include="Resources\offline.jpg" />
-    <None Include="Resources\OfflineMap.jpg" />
     <Content Include="cubes_blue.ico" />
     <None Include="Resources\cubes_blue.ico" />
     <None Include="Resources\folder.png" />
