--- a/Installer_Src/Setup DreamWorld/packages.config
+++ b/Installer_Src/Setup DreamWorld/packages.config
@@ -2,21 +2,25 @@
 <packages>
   <package id="BouncyCastle" version="1.8.9" targetFramework="net472" />
   <package id="DotNetZip" version="1.15.0" targetFramework="net472" />
+  <package id="EmailValidation" version="1.0.4" targetFramework="net472" />
   <package id="Google.Protobuf" version="3.14.0" targetFramework="net472" />
   <package id="Humanizer.Core" version="2.8.26" targetFramework="net472" />
   <package id="ini-parser" version="2.5.2" targetFramework="net461" />
   <package id="K4os.Compression.LZ4" version="1.2.6" targetFramework="net472" />
   <package id="K4os.Compression.LZ4.Streams" version="1.2.6" targetFramework="net472" />
   <package id="K4os.Hash.xxHash" version="1.0.6" targetFramework="net472" />
+  <package id="MailKit" version="2.10.1" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net472" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="3.3.2" targetFramework="net472" developmentDependency="true" />
   <package id="Microsoft.CodeAnalysis.Common" version="3.8.0" targetFramework="net472" />
   <package id="Microsoft.CodeAnalysis.VisualBasic" version="3.8.0" targetFramework="net472" />
   <package id="Microsoft.CodeAnalysis.VisualBasic.Workspaces" version="3.8.0" targetFramework="net472" />
   <package id="Microsoft.CodeAnalysis.Workspaces.Common" version="3.8.0" targetFramework="net472" />
+  <package id="MimeKit" version="2.10.1" targetFramework="net472" />
   <package id="MSChartWrapper" version="1.0.0.1" targetFramework="net46" />
   <package id="MySql.Data" version="8.0.22" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net461" />
+  <package id="Portable.BouncyCastle" version="1.8.9" targetFramework="net472" />
   <package id="SSH.NET" version="2020.0.1" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Collections.Immutable" version="5.0.0" targetFramework="net472" />
