--- a/OutworldzFiles/Opensim/bin/config-include/Proto/Region/OpenSim.ini
+++ b/OutworldzFiles/Opensim/bin/config-include/Proto/Region/OpenSim.ini
@@ -711,10 +711,11 @@ SupportViewerObjectsCache=True
 ;;   "<url>" -- capability enabled and served by some other server
 ;;
 ; These are enabled by default to localhost. Change if you see fit.
-Cap_GetTexture="localhost"
+Cap_GetTexture=${Const|BaseURL}:${Const|PublicPort}
 Cap_GetMesh="localhost"
 Cap_AvatarPickerSearch="localhost"
 Cap_GetDisplayNames="localhost"
+;
 ;
 [SimulatorFeatures]
 ;
