--- a/OutworldzFiles/Opensim/bin/config-include/Proto/Robust/OpenSim.ini
+++ b/OutworldzFiles/Opensim/bin/config-include/Proto/Robust/OpenSim.ini
@@ -706,11 +706,12 @@ SupportViewerObjectsCache=True;
 ;;   "<url>" -- capability enabled and served by some other server
 ;;
 ; These are enabled by default to localhost. Change if you see fit.
-Cap_GetTexture="localhost";; or this
-;Cap_GetTexture=${Const|BaseURL}:${Const|PublicPort}
+;Cap_GetTexture="localhost"
+Cap_GetTexture=${Const|BaseURL}:${Const|PublicPort}
 Cap_GetMesh="localhost"
 Cap_AvatarPickerSearch="localhost"
 Cap_GetDisplayNames="localhost";
+;
 [SimulatorFeatures]
 ;# {SearchServerURI} {} {URL of the search server} {}
 ;; Optional. If given this serves the same purpose as the grid wide
@@ -1245,7 +1246,7 @@ LocalService=remote
 ;; or http://mygridserver.com:82/Grid/ for SimianGrid
 ;; or ${Const|BaseURL}:${Const|PrivatePort} for robust, V2
 ;; Leave it commented for standalones, V2
-GroupsServerURI=${Const|PrivURL}:${Const|PrivatePort}
+GroupsServerURI=${Const|BaseURL}:${Const|PrivatePort}
 ;
 ; Used by JOpensim, from Groups
 XmlRpcServiceReadKey=1234
