--- a/OutworldzFiles/Opensim/bin/Robust.HG.ini
+++ b/OutworldzFiles/Opensim/bin/Robust.HG.ini
@@ -152,7 +152,7 @@ HGAssetServiceConnector="HGAssetService@${Const|PublicPort}/OpenSim.Server.Handl
 HGGroupsServiceConnector="${Const|PublicPort}/OpenSim.Addons.Groups.dll:HGGroupsServiceRobustConnector"
 
 ;; needed for JOpensim profile pictures
-GetTextureConnector=
+GetTextureConnector="${Const|PublicPort}/Opensim.Capabilities.Handlers.dll:GetTextureServerConnector"
 
 ; * This is common for all services, it's the network setup for the entire
 ; * server instance, if none is specified above
@@ -299,7 +299,7 @@ FallbackService=OpenSim.Services.AssetService.dll:AssetService
 DaysBetweenAccessTimeUpdates=30
 
 ;; Should FSAssets print read/write stats to the robust console, default is true
-ShowConsoleStats=True
+ShowConsoleStats=False
 
 ;; FSAssets Custom Database Config (Leave blank to use grids default database configuration)
 ;StorageProvider=
@@ -372,7 +372,10 @@ AssetService="OpenSim.Services.AssetService.dll:AssetService"
 ;; Set by Dreamgrid
 ;;
 ; START  <= Leave this line
+Region_2=FallbackRegion
+Region_3=FallbackRegion
 Region_Welcome="DefaultRegion, DefaultHGRegion"
+Region_Z=FallbackRegion
 
 ; END  <= Leave this line
 ;; Allow Hyperlinks to be created at the console
@@ -546,12 +549,12 @@ MapTileURL="${Const|BaseURL}:${Const|PublicPort}/"
 ; Url to search service
 ;SearchURL = "${Const|BaseURL}:${Const|PublicPort}/JOpensim/index.php?option=com_opensim&view=inworldsearch&task=viewersearch&tmpl=component&"
 ;SearchURL=http://www.hyperica.com/Search/query.php
-SearchURL=
+SearchURL=http://hyperica.com/Search/query.php
 
 ; For V3 destination guide
 ;DestinationGuide = "${Const|BaseURL}:${Const|PublicPort}/JOpensim//index.php?option=com_opensim&view=guide&tmpl=component"
 ;DestinationGuideURI="http://www.hyperica.com/destination-guide/"
-DestinationGuide=
+DestinationGuide=http://hyperica.com/destination-guide
 
 ; For V3 avatar picker (( work in progress ))
 ; AvatarPicker = "${Const|BaseURL}/avatars"
