--- a/OutworldzFiles/Opensim/bin/config-include/Proto/Robust/OpenSim.ini
+++ b/OutworldzFiles/Opensim/bin/config-include/Proto/Robust/OpenSim.ini
@@ -1246,7 +1246,7 @@ LocalService=remote
 ;; or http://mygridserver.com:82/Grid/ for SimianGrid
 ;; or ${Const|BaseURL}:${Const|PrivatePort} for robust, V2
 ;; Leave it commented for standalones, V2
-GroupsServerURI=${Const|BaseURL}:${Const|PrivatePort}
+GroupsServerURI=${Const|PrivURL}:${Const|PrivatePort}
 ;
 ; Used by JOpensim, from Groups
 XmlRpcServiceReadKey=1234
