--- a/OutworldzFiles/Opensim/bin/config-include/Proto/Robust/OpenSim.ini
+++ b/OutworldzFiles/Opensim/bin/config-include/Proto/Robust/OpenSim.ini
@@ -696,7 +696,7 @@ shard="OpenSim"
 ; users may need to reduce viewer bandwitdh if some prims or terrain parts fail to rez.
 ; change to false if you need to use old viewers that do not support this feature
 ;
-SupportViewerObjectsCache=True;
+
 [ClientStack.LindenCaps]
 ;; For the long list of capabilities, see OpenSimDefaults.ini
 ;; Here are the few ones you may want to change. Possible values
@@ -711,6 +711,9 @@ Cap_GetTexture=${Const|BaseURL}:${Const|PublicPort}
 Cap_GetMesh="localhost"
 Cap_AvatarPickerSearch="localhost"
 Cap_GetDisplayNames="localhost";
+;
+SupportViewerObjectsCache=True
+
 ;
 [SimulatorFeatures]
 ;# {SearchServerURI} {} {URL of the search server} {}
@@ -1533,21 +1536,33 @@ enabled = false
 ; name of the concierge
 whoami = "Visitor:"
 ;
+; avatar arriving message using format substitution: {0} avatar name, {1} region name, {2} number of avatars
+announce_entering = "{0} enters {1} (now {2} visitors in this region)"
+'
+; avatar leaving message using format substitution: {0} avatar name, {1} region name, {2} number of avatars
+announce_leaving = "{0} leaves {1} (back to {2} visitors in this region)"	
+;
+; The URL where avatar counts and lists will be sent.
+broker=http://localhost:${Const|DiagnosticsPort}
+;
+; Number of seconds to timeout a broker post request
+broker_timeout=5
+;
 ; password for updating the welcome message templates via XmlRpc
 ;password = SECRET
 ;
 ; regex specifying for which regions concierge service is desired; if
 ; empty, then for all
 regions = ""
-
+;
 ; for each region that matches the regions regexp you can provide
 ; (optionally) a welcome template using format substitution:
 ; {0} is replaced with the name of the avatar entering the region
 ; {1} is replaced with the name of the region
 ; {2} is replaced with the name of the concierge (whoami variable above)
-
+;
 ;welcomes = /path/to/welcome/template/directory
-
+;
 ; Concierge can send attendee lists to an event broker whenever an
 ; avatar enters or leaves a concierged region. the URL is subject
 ; to format substitution:
@@ -1555,3 +1570,20 @@ regions = ""
 ; {1} is replaced with the region's UUID
 ;broker = "http://broker.place.com/{1}"
 ;
+
+[Chat]
+; Chat Amplification
+; The Concierge Module can also replace OpenSim's normal Chat module and "amplify" speech in a region so that it is heard region-wide.
+;
+; When used like this, whispering will still be range limited.
+; There is not a specific OpenSim.ini configuration option for this.
+; It will be enabled depending on the combination of chat and concierge enabled options.
+;
+;If [Chat] enabled = true, then the Concierge chat override will be disabled.
+If [Chat] enable = false, then the Concierge chat override will become active
+;
+enable = true
+;
+[ClientStack.LindenUDP]
+SupportViewerObjectsCache=True
+
