--- a/OutworldzFiles/Opensim/bin/config-addon-opensim/Gloebit.ini
+++ b/OutworldzFiles/Opensim/bin/config-addon-opensim/Gloebit.ini
@@ -29,8 +29,8 @@ GLBEnvironment=sandbox
 ;; Application the GMM on this process will connect to within the environment specified above
 ;; Fill in GLBKey and GLBSecret with values from app created at https://sandbox.gloebit.com/merchant-tools/
 ;; See http://dev.gloebit.com/opensim/configuration-instructions/ for more details.
-GLBKey=
-GLBSecret=
+GLBKey=OAuth Sandbox key
+GLBSecret=OAuth sandbox secret
 
 ;; GLBKeyAlias is optional and can be left out.
 ;; If included, this will be used to make some URLs more user-friendly and human-readalbe
@@ -42,10 +42,10 @@ GLBSecret=
 ;; Those messages will include a trailing instruction string formatted like:
 ;; Please contact GLBOnwerName at GLBOwnerEmail if this problem persists.
 ;; GLBOwnerName should be replaced with the neme of the person or avatar which manages this OpenSim process.
-GLBOwnerName=
+GLBOwnerName=Your Avatar Name
 
 ;; GLBOwnerEmail should be replaced with the email address (or other contact mechanism) for the person who manages this OpenSim process.
-GLBOwnerEmail=
+GLBOwnerEmail=Your Email
 
 ;;;;; CONFIGURE NEW SESSION MESSAGING ;;;;;
 ;; The following determine if a user receives messaging at the start of a new session
@@ -79,4 +79,4 @@ GLBShowWelcomeMessage=True
 ;GLBSpecificConnectionString = "Data Source=localhost;Database=opensim;User ID=opensim;Password=***;Old Guids=true;"
 ;GLBSpecificStorageProvider = "OpenSim.Data.PGSQL.dll"
 GLBSpecificStorageProvider=OpenSim.Data.MySQL.dll
-GLBSpecificConnectionString="Data Source=127.0.0.1;Database=Robust;Port=3306;User ID=robustuser;Password=robustpassword;Old Guids=true;Allow Zero Datetime=true;Connect Timeout=28800;Command Timeout=28800;default command timeout=300;"
+GLBSpecificConnectionString="Data Source=127.0.0.1;Database=robust;Port=3306;User ID=robustuser;Password=robustpassword;Old Guids=true;Allow Zero Datetime=true;Connect Timeout=28800;Command Timeout=28800;default command timeout=300;"
