Fix Wifi emails

--- a/OutworldzFiles/Opensim/bin/Wifi.ini
+++ b/OutworldzFiles/Opensim/bin/Wifi.ini
@@ -11,14 +11,16 @@ Enabled=True
 
 ;; Set this to a port, possibly using one of the ports defined in the host config file
 ;ServerPort = 8002 or ${Const|PublicPort}
-GridName=DreamGrid
+GridName=Mach
 LoginURL=http://192.168.2.139:8002
 WebAddress=http://192.168.2.139:8002
 
 ;; The Wifi Administrator account
 AdminFirst=Wifi
 AdminLast=Admin
-AdminEmail=not@set.yet
+AdminEmail=
+AdminPassword=
+HomeLocation=Welcome/128/128/24
 
 ;; Do you want to be able to control grid registrations?
 AccountConfirmationRequired=False
@@ -54,8 +56,8 @@ HyperlinkServiceUsersSeeAll=true
 ;; Users will get email notifications from this account
 SmtpHost=smtp.gmail.com
 SmtpPort=587
-SmtpUsername=LoginName@gmail.com
-SmtpPassword=Some Password
+SmtpUsername=
+SmtpPassword=
 
 ;; If mono certificates are griefing you, you may bypass certificate verification, but
 ;; DO IT AT YOUR OWN RISK!
@@ -75,5 +77,3 @@ SmtpPassword=Some Password
 ;; base folder "bin" can be accessed via path <WebAddress>/bin/data/, e.g.
 ;; http://localhost:8002/bin/data/prototype.js.
 ServePath_BinData="data, /bin/data"
-AdminPassword=gegLsM4AN5EpNh3
-HomeLocation=Welcome/128/128/24
