--- a/Installer_Src/Setup DreamWorld/packages.config
+++ b/Installer_Src/Setup DreamWorld/packages.config
@@ -12,10 +12,10 @@
   <package id="MailKit" version="2.10.1" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net472" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="3.3.2" targetFramework="net472" developmentDependency="true" />
-  <package id="Microsoft.CodeAnalysis.Common" version="3.8.0" targetFramework="net472" />
-  <package id="Microsoft.CodeAnalysis.VisualBasic" version="3.8.0" targetFramework="net472" />
-  <package id="Microsoft.CodeAnalysis.VisualBasic.Workspaces" version="3.8.0" targetFramework="net472" />
-  <package id="Microsoft.CodeAnalysis.Workspaces.Common" version="3.8.0" targetFramework="net472" />
+  <package id="Microsoft.CodeAnalysis.Common" version="3.9.0" targetFramework="net472" />
+  <package id="Microsoft.CodeAnalysis.VisualBasic" version="3.9.0" targetFramework="net472" />
+  <package id="Microsoft.CodeAnalysis.VisualBasic.Workspaces" version="3.9.0" targetFramework="net472" />
+  <package id="Microsoft.CodeAnalysis.Workspaces.Common" version="3.9.0" targetFramework="net472" />
   <package id="MimeKit" version="2.10.1" targetFramework="net472" />
   <package id="MSChartWrapper" version="1.0.0.1" targetFramework="net46" />
   <package id="MySql.Data" version="8.0.22" targetFramework="net472" />
@@ -30,6 +30,7 @@
   <package id="System.Composition.Hosting" version="5.0.1" targetFramework="net472" />
   <package id="System.Composition.Runtime" version="5.0.1" targetFramework="net472" />
   <package id="System.Composition.TypedParts" version="5.0.1" targetFramework="net472" />
+  <package id="System.IO.Pipelines" version="5.0.1" targetFramework="net472" />
   <package id="System.Memory" version="4.5.4" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net461" />
   <package id="System.Reflection.Metadata" version="5.0.0" targetFramework="net472" />
