--- a/Installer_Src/Setup DreamWorld/packages.config
+++ b/Installer_Src/Setup DreamWorld/packages.config
@@ -3,7 +3,7 @@
   <package id="BouncyCastle" version="1.8.9" targetFramework="net472" />
   <package id="DotNetZip" version="1.15.0" targetFramework="net472" />
   <package id="EmailValidation" version="1.0.4" targetFramework="net472" />
-  <package id="Google.Protobuf" version="3.15.3" targetFramework="net472" />
+  <package id="Google.Protobuf" version="3.15.5" targetFramework="net472" />
   <package id="Humanizer.Core" version="2.8.26" targetFramework="net472" />
   <package id="ini-parser" version="2.5.2" targetFramework="net461" />
   <package id="K4os.Compression.LZ4" version="1.2.6" targetFramework="net472" />
@@ -20,6 +20,7 @@
   <package id="MSChartWrapper" version="1.0.0.1" targetFramework="net46" />
   <package id="MySql.Data" version="8.0.22" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net461" />
+  <package id="ObjectListView.Official" version="2.9.1" targetFramework="net472" />
   <package id="Portable.BouncyCastle" version="1.8.10" targetFramework="net472" />
   <package id="SSH.NET" version="2020.0.1" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
