Reduces DB calls if asset is requested often. Login Service Denial of Service Protection Tweaks Enable Wind Enable Materials ScriptStopStrategy = "co-op" Enable Concierge Broker broker = "http://127.0.0.1:${Const|DiagnosticsPort}/Broker?Name={0}&Region={1}"

--- a/OutworldzFiles/Opensim/bin/config-include/Proto/Robust/OpenSim.ini
+++ b/OutworldzFiles/Opensim/bin/config-include/Proto/Robust/OpenSim.ini
@@ -738,7 +738,7 @@ SupportViewerObjectsCache=True
 ; It will be enabled depending on the combination of chat and concierge enabled options.
 ;
 ;If [Chat] enabled = true, then the Concierge chat override will be disabled.
-If [Chat] enable = false, then the Concierge chat override will become active
+;If [Chat] enable = false, then the Concierge chat override will become active
 ;
 enable = true
 ;
@@ -900,15 +900,15 @@ default_appearance=default_appearance.xml
 ;
 ;# {enabled} {} {Enable wind module?} {true false} true
 ;; Enables the wind module.
-; enabled = true
+enabled = true
 ;
 ;# {wind_update_rate} {enabled:true} {Wind update rate in frames?} {} 150
 ;; How often should wind be updated, as a function of world frames.
 ;; Approximately 50 frames a second
-; wind_update_rate = 150
+wind_update_rate = 150
 ;
 ;; The Default Wind Plugin to load
-; wind_plugin = SimpleRandomWind
+wind_plugin = SimpleRandomWind
 ;
 ;; These settings are specific to the ConfigurableWind plugin
 ;; To use ConfigurableWind as the default, simply change wind_plugin
@@ -921,7 +921,7 @@ default_appearance=default_appearance.xml
 ;# {strength} {enabled:true wind_plugin:SimpleRandomWind} {Wind strength?} {} 1.0
 ;; This setting is specific to the SimpleRandomWind plugin
 ;; Adjusts wind strength. 0.0 = no wind, 1.0 = normal wind.
-; strength = 1.0
+ strength = 1.0
 ;
 [LightShare]
 ;
@@ -938,7 +938,7 @@ enable_windlight=true
 ;
 ;# {enable_materials} {} {Enable Materials support?} {true false} true
 ;; This enables the use of Materials.
-; enable_materials = true
+enable_materials = true
 ;
 ; MaxMaterialsPerTransaction = 50
 ;
@@ -1006,6 +1006,7 @@ SearchURL=
 ; searchPeople = false
 ; also optional
 ; DebugMode = false
+;
 [Economy]
 ;
 ;; EconomyModule = jOpenSimMoneyModule
@@ -1028,9 +1029,11 @@ SellEnabled=true
 ;# {PriceUpload} {} {Price for uploading?} {} 0
 ;; Money Unit fee to upload textures, animations etc.  Default is 0.
 ; PriceUpload = 0
+;
 ;# {PriceGroupCreate} {} {Fee for group creation} {} 0
 ;; Money Unit fee to create groups.  Default is 0.
 ; PriceGroupCreate = 0
+;
 ; Mesh upload settings, independent of economymodule
 ; Create inventory entries for textures uploaded with a model
 ; default is false, ie, do not create
@@ -1056,10 +1059,13 @@ Enabled=False
 ;
 ;; How many threads to keep alive even if nothing is happening
 ; MinThreads = 2
+;
 ;; How many threads to start at maximum load
 ; MaxThreads = 100
+;
 ;; Time a thread must be idle (in seconds) before it dies
 ; IdleTimeout = 60
+;
 ; Set by Dreamgrid to 1/11th of a second. Can be overwritten per region
 ;; llSetTimerEvent minimum value. Default 0.5s, 0.05s whould be more reasonable
 MinTimerInterval=0.2
@@ -1068,13 +1074,16 @@ MinTimerInterval=0.2
 ;; Thread priority ("Lowest", "BelowNormal", "Normal", "AboveNormal",
 ;; "Highest")
 ; Priority = "BelowNormal"
+;
 ;; Maximum number of events to queue for a script (excluding timers)
 ; MaxScriptEventQueue = 300
+;
 ;; Stack size per script engine thread in bytes.
 ;; If you are experiencing StackOverflowExceptions you may want to increase this (e.g. double it).
 ;; The trade-off may be increased memory usage by the script engine.
 ; ThreadStackSize = 262144
 ;; Set this to true (the default) to load each script into a separate
+;
 ;; AppDomain.
 ;;
 ;; Setting this to false will load all script assemblies into the
@@ -1092,7 +1101,8 @@ MinTimerInterval=0.2
 ;; or by deleting the script DLL* files in bin/ScriptEngines/<region-id>/
 ;; One can move from co-op back to abort without recompilation, but reverting back to co-op again will need script recompile
 ;; Current valid values are "abort" and "co-op"
-; ScriptStopStrategy = abort
+ScriptStopStrategy = "co-op"
+;
 ;# {DeleteScriptsOnStartup} {} {Delete previously compiled script DLLs on startup?} {true false} true
 ;; Controls whether previously compiled scripts DLLs are deleted on sim restart. If you set this to false
 ;; then startup will be considerably faster since scripts won't need to be recompiled. However, then it becomes your responsibility to delete the
@@ -1106,15 +1116,19 @@ DeleteScriptsOnStartup=False
 ;# {AllowedCompilers} {Enabled:true} {Languages to allow (comma separated)?} {} lsl
 ;; List of allowed languages (lsl,vb,cs)
 ;; AllowedCompilers=lsl,cs,vb
+;
 ;; *warning*, non lsl languages have access to static methods such as
 ;; System.IO.File.  Enable at your own risk.
 ; AllowedCompilers = "lsl"
+;
 ;; Compile debug info (line numbers) into the script assemblies
 ; CompileWithDebugInformation = true
+;
 ; ==== Settings for MOD and OSSL functions have been moved to the [OSSL] section
 ;# {EventLimit} {} {Amount of time a script can spend in an event handler} {} 30
 ;; Time a script can spend in an event handler before it is interrupted
 ; EventLimit = 30
+;
 ;# {KillTimedOutScripts} {} {Kill script in case of event time overruns?} {true false} false
 ;; If a script overruns it's event limit, kill the script?
 KillTimedOutScripts=true
@@ -1122,28 +1136,35 @@ KillTimedOutScripts=true
 ;# {ScriptDelayFactor} {} {Multiplier for scripting delays} {} 1.0
 ;; Sets the multiplier for the scripting delays
 ; ScriptDelayFactor = 1.0
+;
 ;# {ScriptDistanceLimitFactor} {} {Multiplier for 10.0m distance limits?} {}
 ;; The factor the 10 m distances limits are multiplied by
 ; ScriptDistanceLimitFactor = 1.0
+;
 ;# {NotecardLineReadCharsMax} {} {Maximum length of notecard line?} {} 255
 ;; Maximum length of notecard line read
 ;; Increasing this to large values potentially opens
 ;; up the system to malicious scripters
 ; NotecardLineReadCharsMax = 255
+;
 ;# {SensorMaxRange} {} {Sensor range} {} 96.0
 ;; Sensor settings
 ; SensorMaxRange = 96.0
+;
 ;# {SensorMaxResults} {} {Max sensor results returned?} {}
 ; SensorMaxResults = 16
+;
 ;# {DisableUndergroundMovement} {} {Disable underground movement of prims} {true false} true
 ;; Disable underground movement of prims (default true); set to
 ;; false to allow script controlled underground positioning of
 ;; prims
 ; DisableUndergroundMovement = true
+;
 ;# {ScriptEnginesPath} {} {Path to script assemblies} {} ScriptEngines
 ;; Path to script engine assemblies
 ;; Default is ./bin/ScriptEngines
 ; ScriptEnginesPath = "ScriptEngines"
+;
 [OSSL]
 ;
 ;# {Include-osslEnable} {} {Include file for enabling and permissions for OSSL functions} {}
@@ -1159,12 +1180,14 @@ Include-osslDefaultEnable="config-include/osslEnable.ini"
 ;; You need to load a local service for a standalone, and a remote service
 ;; for a grid region. Use one of the lines below, as appropriate
 ;; If you're using Freeswitch on a standalone then you will also need to configure the [FreeswitchService] section in config-include/StandaloneCommon.ini
+;
 ; LocalServiceModule = OpenSim.Services.FreeswitchService.dll:FreeswitchService
 LocalServiceModule = OpenSim.Services.Connectors.dll:RemoteFreeswitchConnector
 ;; If using a remote connector, specify the server URL
+;
 ;FreeswitchServiceURL = http://my.grid.server:8004/fsapi
 FreeswitchServiceURL = 
-
+;
 [VivoxVoice]
 ;
 ; The VivoxVoice module will allow you to provide voice on your
@@ -1412,7 +1435,6 @@ Include-Architecture="config-include/GridHypergrid.ini"
 ;
 [AutoBackupModule]
 ;
-;
 ; Configuration Settings
 ; Global (in OpenSim.ini under [AutoBackupModule] section)
 ;AutoBackupModuleEnabled: True/False. Default: False. If False, every
@@ -1502,7 +1524,6 @@ AutoBackupDir=O:/Opensim/Outworldz_Dreamgrid/OutworldzFiles/AutoBackup/
 [WebStats]
 enabled=False
 ;
-;
 ;; Thankxx to a tip from Jeremy Westfall!
 [Cloud]
 ;
@@ -1540,7 +1561,6 @@ GLBSpecificConnectionString="Data Source=127.0.0.1;Database=robust;Port=3306;Use
 SearchURL=
 ;
 [SmartStart]
-'
 Enabled=False
 ;
 [Concierge]
@@ -1553,7 +1573,7 @@ whoami = "Visitor:"
 ;
 ; avatar arriving message using format substitution: {0} avatar name, {1} region name, {2} number of avatars
 announce_entering = "{0} enters {1} (now {2} visitors in this region)"
-'
+;
 ; avatar leaving message using format substitution: {0} avatar name, {1} region name, {2} number of avatars
 announce_leaving = "{0} leaves {1} (back to {2} visitors in this region)"	
 ;
@@ -1561,7 +1581,7 @@ announce_leaving = "{0} leaves {1} (back to {2} visitors in this region)"
 broker=http://localhost:${Const|DiagnosticsPort}
 ;
 ; Number of seconds to timeout a broker post request
-broker_timeout=5
+broker_timeout=1
 ;
 ; password for updating the welcome message templates via XmlRpc
 ;password = SECRET
@@ -1583,10 +1603,8 @@ regions = ""
 ; to format substitution:
 ; {0} is replaced with the region's name
 ; {1} is replaced with the region's UUID
-;broker = "http://broker.place.com/{1}"
+broker = "http://127.0.0.1:${Const|DiagnosticsPort}/Broker?Name={0}&Region={1}"
 ;
-
-
 ;
 [ClientStack.LindenUDP]
 SupportViewerObjectsCache=True
