Duplicated Broker in INI

--- a/OutworldzFiles/Opensim/bin/config-include/Proto/Robust/OpenSim.ini
+++ b/OutworldzFiles/Opensim/bin/config-include/Proto/Robust/OpenSim.ini
@@ -49,7 +49,7 @@ http_listener_port=8004
 ;
 ; Automatically changed by Dreamworld - do not change this
 ;# used by the one-exe-per-instance logic. This becomes the folder for the regions file.
-RegionFolderName=!Seconds-Crew
+RegionFolderName=
 ;
 ;# {BaseHostname} {} {BaseHostname} {"example.com" "127.0.0.1"} "127.0.0.1"
 BaseHostname=192.168.2.139
@@ -1578,7 +1578,7 @@ announce_entering = "{0} enters {1} (now {2} visitors in this region)"
 announce_leaving = "{0} leaves {1} (back to {2} visitors in this region)"	
 ;
 ; The URL where avatar counts and lists will be sent.
-broker=http://localhost:${Const|DiagnosticsPort}
+; broker=http://localhost:${Const|DiagnosticsPort}
 ;
 ; Number of seconds to timeout a broker post request
 broker_timeout=1
