Add get texture URL to opensim.ini

--- a/OutworldzFiles/Opensim/bin/config-include/Proto/Robust/OpenSim.ini
+++ b/OutworldzFiles/Opensim/bin/config-include/Proto/Robust/OpenSim.ini
@@ -708,7 +708,7 @@ shard="OpenSim"
 ;;
 ; These are enabled by default to localhost. Change if you see fit.
 ;Cap_GetTexture="localhost"
-Cap_GetTexture=${Const|BaseURL}:${Const|PublicPort}
+Cap_GetTexture="${Const|BaseURL}:${Const|PublicPort}/CAPS/GetTexture/"
 Cap_GetMesh="localhost"
 Cap_AvatarPickerSearch="localhost"
 Cap_GetDisplayNames="localhost";
@@ -1599,4 +1599,5 @@ regions = ""
 ;
 [ClientStack.LindenUDP]
 SupportViewerObjectsCache=True
+
 
